--- a/DeliveryIngesup/DeliveryIngesup/MainPage.xaml
+++ b/DeliveryIngesup/DeliveryIngesup/MainPage.xaml
@@ -2,20 +2,20 @@
     x:Class="DeliveryIngesup.MainPage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:DeliveryIngesup"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    mc:Ignorable="d">
+    mc:Ignorable="d"
+    DataContext="{Binding Main, Mode=TwoWay, Source={StaticResource Locator}}">
 
     <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
         <StackPanel VerticalAlignment="Center" HorizontalAlignment="Center" MinWidth="250">
             <TextBlock Text="Email :"/>
-            <TextBox></TextBox>
+            <TextBox Text="{Binding CurrentUser.Email, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"></TextBox>
             <TextBlock Text="Mot de passe :"/>
-            <TextBox></TextBox>
+            <PasswordBox Password="{Binding CurrentUser.Password, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" PasswordChar="*"></PasswordBox>
             <StackPanel Orientation="Horizontal" HorizontalAlignment="Center">
-                <Button Content="Connexion"/>
-                <Button Content="Inscription"/>
+                <Button Content="Connexion" Command="{Binding ConnexionCommand}"/>
+                <Button Content="Inscription" Command="{Binding InscriptionCommand}"/>
             </StackPanel>
         </StackPanel>
     </Grid>
