--- a/DeliveryIngesup/DeliveryIngesup/Views/Inscription.xaml
+++ b/DeliveryIngesup/DeliveryIngesup/Views/Inscription.xaml
@@ -5,9 +5,25 @@
     xmlns:local="using:DeliveryIngesup.Views"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    mc:Ignorable="d">
+    mc:Ignorable="d"
+    DataContext="{Binding Inscription, Source={StaticResource Locator}}">
 
     <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
-
+        <StackPanel VerticalAlignment="Center" HorizontalAlignment="Center" MinWidth="250">
+            <TextBlock Text="Adresse Email :"/>
+            <TextBox Text="{Binding NouvelUtilisateur.Email, Mode=TwoWay}"></TextBox>
+            <TextBlock Text="Mot de passe :"/>
+            <PasswordBox Password="{Binding NouvelUtilisateur.Password, Mode=TwoWay}" PasswordChar="*"></PasswordBox>
+            <TextBlock Text="Répeter mot de passe :"/>
+            <PasswordBox Password="{Binding CheckPassword, Mode=TwoWay}" PasswordChar="*"></PasswordBox>
+            <TextBlock Text="Nom :"/>
+            <TextBox Text="{Binding NouvelUtilisateur.Nom, Mode=TwoWay}"></TextBox>
+            <TextBlock Text="Prenom :"/>
+            <TextBox Text="{Binding NouvelUtilisateur.Prenom, Mode=TwoWay}"></TextBox>
+            <StackPanel Orientation="Horizontal" HorizontalAlignment="Center">
+                <Button HorizontalAlignment="Center"  Content="Retour"/>
+                <Button HorizontalAlignment="Center"  Content="Valider" Command="{Binding InscriptionCommand}"/>
+            </StackPanel>
+        </StackPanel>
     </Grid>
 </Page>
