--- a/DeliveryIngesup/DeliveryIngesup/Views/Inscription.xaml
+++ b/DeliveryIngesup/DeliveryIngesup/Views/Inscription.xaml
@@ -21,7 +21,7 @@
             <TextBlock Text="Prenom :"/>
             <TextBox Text="{Binding NouvelUtilisateur.Prenom, Mode=TwoWay}"></TextBox>
             <StackPanel Orientation="Horizontal" HorizontalAlignment="Center">
-                <Button HorizontalAlignment="Center"  Content="Retour"/>
+                <Button HorizontalAlignment="Center"  Content="Retour" Command="{Binding RetourCommand}"/>
                 <Button HorizontalAlignment="Center"  Content="Valider" Command="{Binding InscriptionCommand}"/>
             </StackPanel>
         </StackPanel>
