--- a/DeliveryIngesup/DeliveryIngesup/Views/Livraison.xaml
+++ b/DeliveryIngesup/DeliveryIngesup/Views/Livraison.xaml
@@ -66,7 +66,10 @@
                     </maps:MapItemsControl>
                 </maps:Map.Children>
             </maps:Map>
-            <Button Content="Valider la livraison" Grid.Column="0" HorizontalAlignment="Left" Margin="10,10,10,10" VerticalAlignment="Bottom" Command="{Binding ValiderLivraisonCommand}"/>
+        <StackPanel Grid.Column="0" Orientation="Horizontal">
+            <Button Content="Retour" HorizontalAlignment="Left" Margin="10,10,10,10" VerticalAlignment="Bottom" Command="{Binding RetourCommand}"/>
+            <Button Content="Valider la livraison" HorizontalAlignment="Left" Margin="10,10,10,10" VerticalAlignment="Bottom" Command="{Binding ValiderLivraisonCommand}"/>
+        </StackPanel>
        
 
     </Grid>
